# OpenGL

./: CMakeLists.txt  README.md  glad.c  main  main.cpp
include/glad/: glad.h
